gccida/g2/cpp_parse_escape
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/cpplex.c:2156:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *pfile, 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/cpplex.c:2155:10: error: conflicting types for 'cpp_parse_escape'
__int64  cpp_parse_escape( 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/cpplib.h:575:21: note: previous declaration is here
extern unsigned int cpp_parse_escape    PARAMS ((cpp_reader *,
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/cpplex.c:2267:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v21] & 0x100) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/cpplex.c:2270:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v23 = hex_value[*v10]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/cpplex.c:2357:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[**a2] & 0xAC) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/cpplex.c:2367:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v11] & 0x100) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/cpplex.c:2372:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v27 = hex_value[v28]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_parse_escape/src/obj/cpplex.o] Error 1
